# PropMixr

./: CMakeLists.txt  Makefile  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
docs/: Notes.md
include/: json_pantry.hpp  pantry.hpp  propmixr.hpp  ryml_pantry.hpp  xml_pantry.hpp  yaml_pantry.hpp
tests/: test_engine.cpp  test_pantry.cpp  test_parser.cpp
